--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-facebook-pixel": "^1.0.8",
     "gatsby-plugin-google-gtag": "^4.10.0",
     "gatsby-plugin-hotjar": "^1.1.1",
+    "gatsby-plugin-hubspot": "^2.0.0",
     "gatsby-plugin-image": "^2.8.0",
     "gatsby-plugin-manifest": "^4.9.1",
     "gatsby-plugin-netlify": "^4.1.0",
