Fix name of early bird image in GraphQL to prevent Gatsby image type error

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -499,7 +499,11 @@ collections:
                     fields:
                       [{ label: Objective, name: objective, widget: string }],
                   },
-                  { label: Image, name: image, widget: image },
+                  {
+                    label: Earlybirdimage,
+                    name: earlybirdimage,
+                    widget: image,
+                  },
                 ],
             }
           - {
