--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby": "^4.7.1",
     "gatsby-plugin-facebook-pixel": "^1.0.8",
     "gatsby-plugin-google-gtag": "^4.10.0",
+    "gatsby-plugin-google-tagmanager": "^4.24.0",
     "gatsby-plugin-hotjar": "^1.1.1",
     "gatsby-plugin-hubspot": "^2.0.0",
     "gatsby-plugin-image": "^2.8.0",
